[package]
name         = "ibc-proto-compiler"
version      = "0.3.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
publish      = false
rust-version = "1.75"

[dependencies]
git2                         = "0.19"
prost-build                  = "0.14.1"
tonic-prost-build            = "0.14.1"
walkdir                      = "2.3"
argh                         = "0.1"
tonic                        = "0.14.1"
tonic-build                  = "0.14.1"
similar                      = "2.2"
informalsystems-pbjson-build = { path = "../../../pbjson/pbjson-build" }
regex                        = "1"
